# mcpy

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: main.yaml
cmd_reference/: index.html
docs/: cmd_reference.md  get-started.md  index.md  reference.md  working-with-commands.md
docs/tutorials/: get-started.md
docs/user-guides/: how-to-include-dependencies.md
examples/docs_examples/data/minecraft/tags/functions/: load.json
examples/docs_examples/src/: pack.py
examples/simple-datapack/: pack.mcmeta
examples/simple-datapack/src/: pack.py  simple_pack.py
examples/tick-and-load/data/dt.example/functions/: on_load.mcfunction  on_tick.mcfunction
examples/tick-and-load/data/minecraft/tags/functions/: load.json  tick.json
examples/tick-and-load/src/: pack.py  tick_load_pack.py
get-started/: index.html
how-to-include-dependencies/: index.html
mcpy/: __init__.py  mcpy.py
reference/: index.html
src/mcpy/: __init__.py  __main__.py  config.py  context.py  context_managers.py  datapack.py  decorators.py  helper.py  mcpy.py  plugin.py  util.py
src/mcpy/cmd/: __init__.py  block.py  common.py  data.py  exec.py  execute.py  function.py  misc.py  nbt.py  scoreboard.py  selector.py  tag.py  tellraw.py  util.py  vars.py
tests/mcpy/: test_cmds.py  test_mcpy.py
tests/mcpy/cmd/: test_nbt.py  test_scoreboard.py  test_vars.py  util.py
tutorials/get-started/: index.html
user-guides/get-started/: index.html
user-guides/how-to-include-dependencies/: index.html
working-with-commands/: index.html
(+5 files in other folders)
